# baymax.app

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  api.py  app.py  config.py  crew.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  test.py  test_groq.py
.do/: app.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
agents/: __init__.py  career_planner_agent.py  interview_agent.py  job_search_agent.py  resume_agent.py
backend/: Dockerfile
docs/: AGENTS.md  ARCHITECTURE.md
frontend/: Dockerfile  vite.config.ts
frontend/src/components/: Dashboard.tsx  InterviewCoach.tsx  JobScout.tsx  ResumeAnalyzer.tsx  ResumeBuilder.tsx  RoadmapPlanner.tsx
frontend/src/hooks/: use-user-session.ts
frontend/src/lib/: api.ts
rag/: __init__.py  pipeline.py
tools/: __init__.py  pdf_tool.py  search_tool.py
